# pbidoc

./: .env.example  .gcloudignore  .gitignore  BEGINNER_DEPLOY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_QUALITY_PLAN.md  Dockerfile  LICENSE  PBICOMPASS_OUTPUT_BENCHMARK.md  README.md  ROADMAP_PROGRESS.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: BEGINNER_DEPLOY.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  TOOL_DETAILS.md
docs/design/: wireframe-v4-light.html
docs/planning/: AI_NATIVE_PLAN.md  DOCUMENTATION_QUALITY_PLAN.md  GO_LIVE_PLAN.md  PERFECTION_AUDIT.md  PRODUCTION_ROADMAP.md  ROADMAP_PROGRESS.md
examples/: README.md
saas-demo/: README.md  build.mjs  index.html  package.json  robots.txt  script.js  sitemap.xml  styles.css
saas-demo/.openai/: hosting.json
src/pbicompass/: __init__.py  cli.py  enrichment.py
src/pbicompass/adapters/: __init__.py  pbixray_adapter.py
src/pbicompass/agents/: __init__.py  assist.py  audit_rules.py  benchmark.py  cache.py  consistency.py  context.py  critic.py  deterministic.py  grounding.py  insights.py  io.py  llm.py  orchestrator.py  output_gate.py  report_facts.py  reviewer.py  sanitize.py  traceability.py  usage.py
src/pbicompass/agents/generators/: __init__.py  audit.py  base.py  executive.py  technical.py  user_guide.py
src/pbicompass/parsers/: __init__.py  base.py  m_steps.py  pbip.py  pbir.py  tmdl.py  tmsl.py
src/pbicompass/publish/: __init__.py  base.py  confluence.py  filesystem.py  sharepoint.py  teams.py
src/pbicompass/render/: __init__.py  _dax_highlight.py  _diagram_theme.py  _docx_writer.py  _html_shell.py  _lineage.py  _logo.py  _measure_deps.py  _model_diagram.py  _nav_map.py  _poppins_font.py  _shared.py  _wireframe.py  audit.py  docx.py  executive.py  html.py  hub.py  markdown.py  pandoc.py  registry.py  user_guide.py
src/pbicompass/schemas/: __init__.py  audit_document.py  document.py  executive_document.py  model.py  shared.py  user_guide_document.py
src/pbicompass/service/: __init__.py  accounts.py  app.py  celery_app.py  db.py  db_backup.py  email.py  ingest.py  jobs.py  logging_config.py  metrics.py  oidc.py  output_store.py  passwords.py  ratelimit.py  sandbox.py  sentry_config.py  supabase_auth.py  visits.py  worker.py
src/pbidoc/agents/: deterministic.py
src/pbidoc/service/static/: index.html
supabase/templates/: confirm-signup.html
tests/: conftest.py  test_accounts_postgres.py  test_admin.py  test_agents.py  test_audit_rules.py  test_auth.py  test_benchmark.py  test_celery_app.py  test_cli.py  test_consistency.py  test_critic.py  test_dashboard.py  test_dax_highlight.py  test_db.py  test_db_backup.py  test_email.py  test_email_auth.py  test_enrichment.py  test_generators.py  test_golden_html.py  test_grounding.py  test_healthz.py  test_job_deadline.py  test_jobs.py  test_jobs_postgres.py  test_lineage.py  test_logging_config.py  test_metrics.py  test_oidc.py  test_output_gate.py  test_output_quality_guards.py  test_output_store.py  test_parser.py  test_pbix_adapter.py  test_publish.py  test_ratelimit.py  test_render.py  test_report_facts.py  test_reviewer.py  test_sanitize.py  (+9 more)
tests/fixtures/golden/: audit.html  corporate_spend_audit.html  corporate_spend_executive.html  corporate_spend_technical.html  corporate_spend_user_guide.html  executive.html  technical.html  user_guide.html
vbeta2/: audit.html  executive.html  index.html  technical.html  user-guide.html
(+8 files in other folders)
