[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pbicompass"
version = "0.1.0"
description = "Enterprise Power BI Documentation Generator — metadata-only parser and AI documentation pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rajdeep Rao" }]
# Phase 0 core is intentionally ZERO-DEPENDENCY (stdlib only).
# This keeps the parser portable, easy to audit, and minimises the number of
# third-party libraries that ever touch customer metadata (zero-data-leakage).
dependencies = []

[project.optional-dependencies]
# Added in later phases — kept out of the core so the parser stays dependency-free.
# pbix: legacy .pbix semantic-model extraction. pbixray currently needs
# Python <= 3.13 (its xpress9 decompressor has no 3.14 wheel yet) — the
# environment marker below makes that degrade gracefully at pip-install time
# on 3.14+ instead of failing.
pbix = ["pbixray; python_version < '3.14'"]
enrich = ["PyYAML"]
agents = ["anthropic", "google-genai", "cohere", "openai"]  # Claude / Gemini / Cohere / MeshAPI providers (offline engine needs nothing)
service = ["fastapi", "uvicorn", "python-multipart"]  # async web service + upload UI
postgres = ["psycopg[binary]"]  # managed Postgres backend for AccountStore (PBICOMPASS_DB=postgres://...); sqlite stays the self-host default
queue = ["celery", "redis"]  # async worker (PBICOMPASS_QUEUE=celery); BackgroundTasks stays the self-host default
observability = ["sentry-sdk"]  # error tracking (SENTRY_DSN); off and dependency-free by default
auth = ["PyJWT[crypto]"]  # Supabase Auth JWT verification (SUPABASE_URL/JWT_SECRET); absent = the Bearer-API-key path still works alone
dev = ["pytest", "httpx"]  # httpx backs FastAPI's TestClient

[project.scripts]
pbicompass = "pbicompass.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pbicompass.service" = ["static/*.html", "static/vendor/*.js"]
